# inkimera

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  allowed_signers  uncrustify.cfg
.github/workflows/: cmake.yaml  uncrustify.yaml
editor/: CMakeLists.txt
editor/include/plugins/: gui.h  keyboard_state_machine.h
editor/lib/: CMakeLists.txt
editor/lib/include/: project.h
editor/lib/src/: project.c
editor/plugins/: README.md
editor/plugins/gui/: CMakeLists.txt
editor/plugins/gui/include/: gui.h  gui_node.h  keyboard_state_machine.h
editor/plugins/gui/include/systems/: gui_input.h  gui_update.h
editor/plugins/gui/include/widgets/: gui_menu_header_widget.h  gui_scene_graph_widget.h  gui_scene_widget.h
editor/plugins/gui/include/widgets/gui_menu/: gui_new_project_widget.h  gui_open_project_widget.h
editor/plugins/gui/src/: gui.c  gui_node.c  keyboard_state_machine.c
editor/plugins/gui/src/systems/: gui_input.c  gui_update.c
editor/plugins/gui/src/widgets/: gui_menu_header_widget.c  gui_scene_graph_widget.c  gui_scene_widget.c
editor/plugins/gui/src/widgets/gui_menu/: gui_new_project_widget.c  gui_open_project_widget.c
editor/plugins/scene_editor/: CMakeLists.txt
editor/plugins/scene_editor/include/: scene_editor.h
editor/plugins/scene_editor/src/: scene_editor.c
editor/src/: main.c
editor/src/plugins/: gui.c  keyboard_state_machine.c
engine/: CMakeLists.txt
engine/include/: inkimera.h
engine/include/components/: 3d.h  gui.h  pipeline.h  script.h
engine/lib/hashmap/include/: hashmap.h
engine/lib/raylib_nuklear/: CMakeLists.txt
engine/lib/raylib_nuklear/include/: raylib_nuklear.h
engine/lib/raylib_nuklear/src/: raylib_nuklear.c
engine/lib/signal/: CMakeLists.txt
engine/lib/signal/include/: signal.h
engine/lib/signal/src/: signal.c
engine/src/: engine.c
engine/src/engine/: pipeline.c
engine/src/engine/components/: 3d_components.c  gui_components.c  plugin_components.c
engine/src/engine/entities/: gui_node.c
engine/src/engine/systems/: 3d_systems.c  gui_systems.c
engine/src/include/: engine.h  pipeline.h
engine/src/include/components/: 3d_components.h  gui_components.h  plugin_components.h
engine/src/include/entities/: gui_node.h
engine/src/include/systems/: 3d_systems.h  gui_systems.h
